rss-account-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rss-account-service
spec:
  selector:
    app: rss-account-service
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
